--- a/EFI/OC/config.plist
+++ b/EFI/OC/config.plist
@@ -1014,7 +1014,7 @@
 			<key>ThirdPartyDrives</key>
 			<false/>
 			<key>XhciPortLimit</key>
-			<true/>
+			<false/>
 		</dict>
 		<key>Scheme</key>
 		<dict>
